@@ -10,6 +10,7 @@ installer = MakeMaker
 Test::ReportPrereqs.include[0] = CPAN::Meta::Validator
 Test::ReportPrereqs.include[1] = Module::Build
 Test::ReportPrereqs.include[2] = Module::Build::Tiny
+Test::MinimumVersion.max_target_perl = 5.010    ; \K
 
 [MetaResources]
 x_IRC = irc://irc.perl.org/#distzilla
@@ -28,5 +29,7 @@ Test::Warnings = 0
 [DynamicPrereqs]
 -raw = $WriteMakefileArgs{PREREQ_PM}{'Dist::Zilla::Plugin::ModuleBuildTiny'} = '0.007'
 -raw = if eval 'use Dist::Zilla::Plugin::ModuleBuildTiny; 1';
+-raw = $WriteMakefileArgs{PREREQ_PM}{'Dist::Zilla::Plugin::ModuleBuildTiny::Fallback'} = '0.006'
+-raw = if eval 'use Dist::Zilla::Plugin::ModuleBuildTiny::Fallback; 1';
 
 [Test::CleanNamespaces]
