@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - now also testing interaction with [MakeMaker::Fallback],
+            [ModuleBuildTiny::Fallback] -- the latter requiring fixes
 
 0.002     2014-09-04 06:34:59Z
           - insertion of check_lib_or_exit arguments updated, so
